Fixing some styles on mobile.

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -148,7 +148,7 @@ input[type="radio"]:checked + label {
   margin: 18px 0;
 }
 #create-poll .actions {
-  margin-top: 20px;
+  margin-top: 30px;
 }
 #create-poll .actions a {
   display: block;
@@ -346,8 +346,9 @@ only screen and (min-resolution: 2dppx) {
   #vote-now {
     margin: 0 0 20px 0;
   }
-  #vote-now, #see-results {
-    display: block;
+  #vote-now, #see-results, .action {
+    clear: both;
+    width: 100%;
   }
   ol, ul {
     margin-left: 45px;
